# vinagre

./: meson.build  meson_options.txt
data/: meson.build  vinagre-file.desktop.in.in  vinagre-mime.xml.in  vinagre.appdata.xml.in  vinagre.desktop.in.in
help/: LINGUAS  meson.build
plugins/: meson.build
po/: POTFILES.in  POTFILES.skip  he.po  meson.build  ta.po
vinagre/: meson.build
