sources = [
  'connect.page',
  'connect-file.page',
  'connect-reverse.page',
  'fullscreen.page',
  'index.page',
  'introduction.page',
  'legal.xml',
  'keyboard-shortcuts.page',
  'scaling.page',
  'take-screenshot.page',
  'view-only.page',
]

media = [
  'figures/preferences-desktop-remote-desktop.png',
  'figures/vinagre-connected-3-16.png',
]

gnome.yelp(
  vinagre_name,
  sources: sources,
  media: media,
  symlink_media: true,
)
