vnc_sources = files(
  'vnc/vinagre-vnc-connection.c',
  'vnc/vinagre-vnc-plugin.c',
  'vnc/vinagre-vnc-tab.c',
  'vnc/vinagre-vnc-tunnel.c',
)

vnc_inc = include_directories('vnc')

rdp_sources = files(
  'rdp/vinagre-rdp-connection.c',
  'rdp/vinagre-rdp-plugin.c',
  'rdp/vinagre-rdp-tab.c',
)

rdp_inc = include_directories('rdp')

ssh_sources = files(
  'ssh/vinagre-ssh-connection.c',
  'ssh/vinagre-ssh-plugin.c',
  'ssh/vinagre-ssh-tab.c',
)

ssh_inc = include_directories('ssh')

spice_sources = files(
  'spice/vinagre-spice-connection.c',
  'spice/vinagre-spice-plugin.c',
  'spice/vinagre-spice-tab.c',
  'spice/vinagre-spice-tunnel.c',
)

spice_inc = include_directories('spice')
